using TheMovie.Domain.Entities;

namespace TheMovie.Application.Abstractions;

public interface ICinemaRepository : IRepositoryBase<Cinema>
{
}
