using TheMovie.Domain.Entities;

namespace TheMovie.Application.Abstractions;

public interface IHallRepository : IRepositoryBase<Hall>
{
}
