using TheMovie.Domain.Entities;

namespace TheMovie.Application.Abstractions;

public interface IScreeningRepository : IRepositoryBase<Screening>
{
}
